<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A000000"
    tools:ignore="MissingConstraints">

    <!--    =====================================================================    -->

    <!--    -   -   -   ICON    -   -   -    -->

    <Button
        android:id="@+id/button_loginNoUser"

        android:layout_width="226dp"
        android:layout_height="44dp"

        android:layout_marginLeft="92dp"
        android:layout_marginTop="90dp"

        android:hint="Đăng nhập không có tài khoản"
        android:textColorHint="#000000"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textPass" />

    <ImageView
        android:id="@+id/icon_user"

        android:layout_width="240dp"
        android:layout_height="240dp"

        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="85dp"

        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <!--    =====================================================================    -->

    <!--    -   -   -   EDIT_TEXT User    -   -   -    -->
    <EditText
        android:id="@+id/textUser"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"

        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="#FFFFFF"

        android:textColorHint="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf=" @id/icon_user" />
    <!--    -   -   -   EDIT_TEXT Pass    -   -   -    -->
    <EditText
        android:id="@+id/textPass"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"

        android:textColorHint="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/textUser" />

    <!--    =====================================================================    -->

    <!--    -   -   -   Button Login    -   -   -    -->
    <Button
        android:id="@+id/button_login"

        android:layout_width="158dp"
        android:layout_height="45dp"

        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"

        android:hint="@string/login"
        android:textColorHint="#000000"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textPass" />

    <!--    -   -   -   Button Sign Up    -   -   -    -->
    <Button
        android:id="@+id/button_sign_up"

        android:layout_width="158dp"
        android:layout_height="45dp"

        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"

        android:hint="@string/sign_up"
        android:textColorHint="#000000"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textPass" />

    <!--    =====================================================================    -->

    <!--    -   -   -   CheckBox Remember    -   -   -    -->

    <!--    =====================================================================    -->

    <!--    -   -   -   CheckBox Remember    -   -   -    -->


</androidx.constraintlayout.widget.ConstraintLayout>